youfull/objects/User_Login_Param__c.object
<CustomObject>
    <fields>
        <fullName>Is_My_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is My Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Widget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Widget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lang_cd__c</fullName>
        <label>Lang cd</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Id__c</fullName>
        <label>Page Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_type__c</fullName>
        <label>Report type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>User Login Param</label>
    <nameField>
        <displayFormat>ULP- {0000}</displayFormat>
        <label>User Login Param</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Login Params</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>